# libwebmap

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md
cmake/: GenerateSpliceDiagrams.cmake  LinkDemoData.cmake  WasmToolchain.cmake
data/: README.md
demo/: index.html  main.js  webmap.wasm
demo/basemap/: manifest.json
demo/basemap/10/235/: 400.wmap  401.wmap  402.wmap  403.wmap  404.wmap  405.wmap
demo/basemap/10/236/: 400.wmap  401.wmap  402.wmap  403.wmap  404.wmap  405.wmap
demo/basemap/10/237/: 400.wmap  401.wmap  402.wmap  403.wmap  404.wmap  405.wmap
demo/basemap/10/238/: 400.wmap  401.wmap  402.wmap  403.wmap  404.wmap  405.wmap
demo/basemap/10/239/: 400.wmap  401.wmap  402.wmap  403.wmap  404.wmap  405.wmap
demo/basemap/10/240/: 400.wmap  401.wmap  402.wmap  403.wmap  404.wmap  405.wmap
demo/basemap/10/241/: 400.wmap  401.wmap  402.wmap  403.wmap  404.wmap  405.wmap
demo/basemap/11/471/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/472/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/473/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/474/: 802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/475/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/476/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/477/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/478/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/479/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/480/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/481/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/482/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/11/483/: 801.wmap  802.wmap  803.wmap  804.wmap  805.wmap  806.wmap  807.wmap  808.wmap  809.wmap  810.wmap  811.wmap
demo/basemap/12/942/: 1603.wmap  1604.wmap  1605.wmap  1606.wmap  1607.wmap  1608.wmap  1609.wmap  1610.wmap  1611.wmap  1612.wmap  1613.wmap  1614.wmap  1615.wmap  1616.wmap  1617.wmap  1618.wmap  1619.wmap  1620.wmap  1621.wmap  1622.wmap  1623.wmap
demo/basemap/12/943/: 1603.wmap  1604.wmap  1605.wmap  1606.wmap  1607.wmap  1608.wmap  1609.wmap  1610.wmap  1611.wmap  (+12 more)
demo/display/: dynamic_feed.js  fiber_fmap.js  fiber_layer.js  fiber_magnifier.js  fiber_schematic.js  fiber_style.js  fiber_trace.js  glass_lens_gpu.js  glass_tokens.js  glass_ui.css  mem_stats.js  optical_budget.js  schematic_layout.js  tile_cache.js  wasm_abi.js  wasm_host.js  weather_layer.js  wmap_parse.js
demo/dynamic/: sample_events.jsonl
demo/fiber_data/: manifest.json
demo/tiles/: manifest.json
demo/weather/: sample_alerts.json
docs/: DOMAIN.md  README.md
docs/decisions/: 001-agent-ready-documentation.md  002-pure-c-choice.md  003-ring-buffer-event-queue.md  004-no-syscalls.md  005-no-callbacks.md  006-maplibre-rs-inspired-structure.md  007-webgpu-oriented-buffers.md  008-library-holds-map-data.md  009-no-emscripten.md  010-cmake-clang-wasm.md  011-geofabrik-mvt-utility.md  012-rural-status-map-domain.md  013-strict-warnings.md  014-plumbing-vs-host-renderer.md  015-fiber-data-display-split.md  016-fiber-hover-magnifier.md  017-three-tier-data-boundary.md  018-fiber-path-trace.md  019-memory-budgets-from-measurement.md  020-schematic-layout-wasm.md  021-glass-ui-design-language.md  022-weather-package-host-paint.md  023-dynamic-updates-host-notify.md  024-wasm-host-contract.md  025-wasm-freelist-heap.md  026-wasm-default-opt-in.md  027-webgpu-glass-lens.md
docs/designs/: data-sources-display-separation.md  optical-budget.md
docs/formats/: data-packages.md  fiber-design-input.md  fmap.md  path-index.md  weather-package.md
docs/guides/: dynamic-feed.md  fiber-map-data.md  glass-ui.md  memory-attribution.md  oklahoma-tiles.md  p46-compare-latest.json  schematic-layout.md  wasm-default-on-gate.md  wasm.md
examples/: status_map_sketch.c
fixtures/dynamic/: sample_ws_envelope.jsonl
fixtures/fiber_path_trace/: README.md  sample_v2.fmap  sample_v3.fmap
fixtures/fiber_path_trace/package/: manifest.json
fixtures/schematic/: sample_tap.json
fixtures/tulsa_z10/: 238_401.pbf
include/: webmap.h  webmap_mvt.h  webmap_schematic.h
man/man3/: webmap_create.3
src/: webmap.c  webmap_mvt.c  webmap_schematic.c
tests/: test_dynamic_feed.mjs  test_fixture_oklahoma.c  test_fmap_parse.py  test_frustum.c  test_glass_lens_gpu.mjs  test_glass_tokens.mjs  test_mvt_smoke.c  test_polygon_fill.c  test_schematic_layout.c  test_schematic_layout_js.mjs  test_schematic_p411.mjs  test_tile_eviction.c  test_wasm_abi_pack.c  test_wasm_heap.c  test_wasm_p413.mjs  test_weather_layer.mjs  test_webmap_smoke.c  test_wmap_roundtrip.c
tools/: build_fiber_package.sh  compare_wasm_parse.mjs  export_path_index.py  export_splice_detail.py  extract_oklahoma_counties.py  prepare_demo_tiles.sh
tools/basemap_pipeline/: README.md  build_package.sh  extract_region.py
tools/fiber2features/: README.md  embed_schema.py  fiber2features.c  schema_map_sql.c
tools/gfvtile2wmap/: main.c
tools/schema/: schema_map.sql
tools/splice_diagram/: README.md  splice_diagram.c  splice_diagram.h  splice_diagram_cli.c
wasm/: webmap_abi_layout.c  webmap_heap.c  webmap_heap.h  webmap_wasm_entry.c  webmap_wasm_rt.c
(+2573 files in other folders)
